Fix alignment issues with print CSS.

--- a/source/stylesheets/print.css.scss
+++ b/source/stylesheets/print.css.scss
@@ -38,13 +38,14 @@ body {
 
 .content {
   font-size: 12px;
+  margin: 20px;
 
   pre, code {
     @extend %code-font;
     @extend %break-words;
     border: 1px solid $print-color;
     border-radius: 5px;
-    font-size: 0.8em;
+    margin: 0;
   }
 
   pre {
@@ -59,6 +60,24 @@ body {
 
   code {
     padding: 0.2em;
+  }
+
+  blockquote {
+    margin: 0;
+    margin-bottom: 2em;
+    display: flex;
+    flex-direction: $nested-blockquotes-direction;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  blockquote blockquote {
+    padding: 1.3em;
+    border: 1px solid $print-color;
+    border-radius: 5px;
+    margin-bottom: 0;
   }
 
   table {
@@ -146,8 +165,28 @@ body {
   }
 }
 
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .copy-clipboard {
   @media print {
     display: none
   }
 }
+
+.lang-select {
+  @media print {
+    display: none
+  }
+}
+
+.lang-selector {
+  @media print {
+    display: none
+  }
+}
+
+
